name:                run
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://git.informatik.uni-kiel.de/jrt/lps-template
-- license:
-- license-file:
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable run
  main-is:             Executable/Main.hs
  -- other-modules:
  other-extensions:    FlexibleContexts, OverloadedStrings
  build-depends:       base
                     , bytestring >=0.10 && <0.11
                     , mtl >=2.2 && <2.3
                     , aeson >=0.11.2.0 && <=0.11.2.0
                     , directory >=1.2 && <1.3
                     , filepath >=1.3 && <1.4
                     , temporary >=1.2 && <1.3
                     , process >=1.4 && <1.5
                     , MissingH >=1.3 && <1.4
                     , transformers >=0.5 && <0.6
                     , regex-posix >=0.95 && <1.0
                     , split >= 0.2 && <0.3
                     , vector >=0.10 && <0.12
                     , edit-distance >= 0.2 && < 0.3
                     , containers >= 0.5 && <0.6
                     , array >=0.5.1.0
                     , pretty >= 1.1.1.1 && < 1.1.1.2
  hs-source-dirs:      src
  default-language:    Haskell2010